# Coin3DUtils

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  READMe.md  SoFCCSysDragger.cpp  SoFCCSysDragger.h  dragger.cpp  vcpkg.json
PyInventor/: CMakeLists.txt
_pydef_pybind11/: pybind_Inventor.cpp
sandbox/: CoinImGui.cpp
srcs/: CMakeLists.txt  So3DAnnotation.h  dragger.cpp
srcs/CJKText/: CMakeLists.txt
srcs/FreeCADGizmo/: CMakeLists.txt  FreeCADGizmoDemo.cpp  So3DAnnotation.cpp  SoFCCSysDragger.cpp  SoFCCSysDragger.h
srcs/GlfwCoin/: CMakeLists.txt  CoinApp.cpp  CoinAppDemo.cpp  CoinAppImpl.cpp  CoinAppImpl.h  EventCallback.cpp  EventCallback.h  GlfwCoinApp.cpp  GlfwCoinApp.h  GlfwCoinDemo.cpp
srcs/GlfwCoin/include/: CoinApp.h
tools/: generate_bindings.py
